@@ -2,11 +2,16 @@ package br.com.eber.catalogo_livros.controller;
 
 import br.com.eber.catalogo_livros.dto.LivroRequestDTO;
 import br.com.eber.catalogo_livros.dto.LivroResponseDTO;
+import br.com.eber.catalogo_livros.dto.PageResponseDTO;
 import br.com.eber.catalogo_livros.model.Livro;
 import br.com.eber.catalogo_livros.service.LivroService;
+import jakarta.validation.Valid;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -23,9 +28,42 @@ public class LivroController {
     }
 
     @GetMapping
-    public ResponseEntity<List<LivroResponseDTO>> listarTodos() {
+    public ResponseEntity<PageResponseDTO<LivroResponseDTO>> listar (Pageable pageable) {
 
-        List<LivroResponseDTO> lista = livroService.listarTodos()
+        Page<LivroResponseDTO> page = livroService.listar(pageable)
+                .map(livro -> new LivroResponseDTO(
+                        livro.getId(),
+                        livro.getTitulo(),
+                        livro.getAutor(),
+                        livro.getPreco(),
+                        livro.getIsbn(),
+                        livro.getAnoPublicacao()
+                ));
+        return ResponseEntity.ok(new PageResponseDTO<>(page));
+
+    }
+
+    @GetMapping("/{id}")
+    public ResponseEntity<LivroResponseDTO> buscarPorId(@PathVariable Long id) {
+
+        Livro livro = livroService.buscarPorId(id);
+
+        LivroResponseDTO dto = new LivroResponseDTO(
+                livro.getId(),
+                livro.getTitulo(),
+                livro.getAutor(),
+                livro.getPreco(),
+                livro.getIsbn(),
+                livro.getAnoPublicacao()
+        );
+
+        return ResponseEntity.ok(dto);
+    }
+
+    @GetMapping("/autor")
+    public ResponseEntity<List<LivroResponseDTO>> buscarPorAutor(@RequestParam String nome) {
+
+        List<LivroResponseDTO> lista = livroService.buscarPorAutor(nome)
                 .stream()
                 .map(livro -> new LivroResponseDTO(
                         livro.getId(),
@@ -35,49 +73,14 @@ public class LivroController {
                         livro.getIsbn(),
                         livro.getAnoPublicacao()
                 ))
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(lista);
     }
 
-    @PostMapping
-    public ResponseEntity<LivroResponseDTO> salvar(@RequestBody LivroRequestDTO dto) {
 
-        Livro livro = new Livro();
-        livro.setTitulo(dto.getTitulo());
-        livro.setAutor(dto.getAutor());
-        livro.setIsbn(dto.getIsbn());
-        livro.setAnoPublicacao(dto.getAnoPublicacao());
 
-        Livro novoLivro = livroService.salvar(livro);
 
-        LivroResponseDTO response = new LivroResponseDTO(
-                novoLivro.getId(),
-                novoLivro.getTitulo(),
-                novoLivro.getAutor(),
-                novoLivro.getPreco(),
-                novoLivro.getIsbn(),
-                novoLivro.getAnoPublicacao()
-        );
-
-        return ResponseEntity.status(HttpStatus.CREATED).body(response);
-    }
-
-    @GetMapping("/{id}")
-    public ResponseEntity<LivroResponseDTO> buscarPorId(@PathVariable Long id) {
-
-        return livroService.buscarPorId(id)
-                .map(livro -> new LivroResponseDTO(
-                        livro.getId(),
-                        livro.getTitulo(),
-                        livro.getAutor(),
-                        livro.getPreco(),
-                        livro.getIsbn(),
-                        livro.getAnoPublicacao()
-                ))
-                .map(ResponseEntity::ok)
-                .orElse(ResponseEntity.notFound().build());
-    }
 }
 
 
